--- a/sketch_meta/material_clock.html
+++ b/sketch_meta/material_clock.html
@@ -85,7 +85,7 @@ class Line {
       this.rotation += 6;
     }
 
-    // this.sound.play();
+    this.sound.play();
     this.e.transition()
       .duration(this.tweenTime)
       .ease(d3.easeCubicInOut)
