--- a/sketch_meta/material_clock.html
+++ b/sketch_meta/material_clock.html
@@ -4,6 +4,7 @@
 <title>Meta Sketch</title>
 <style>
 body {
+  background-color: black;
   text-align: center;
 }
 </style>
@@ -58,11 +59,11 @@ class Line {
 
     this.stroke = 'black';
     this.strokeWidth = 10;
-    this.opacity = 0.5;
+    this.opacity = 1.0;
     this.l = 100;
 
     this.rotation = 90;
-    this.strokeLinecap = 'round';
+    this.strokeLinecap = 'square';
 
     this.shouldRotate = false;
     this.rotate = 6;
@@ -70,6 +71,7 @@ class Line {
     this.originY = 200;
 
     this.lBounds = [1, 100];
+    this.sBounds = [1, 20];
 
     this.sound = new Audio('celesta.wav');
 
@@ -91,7 +93,7 @@ class Line {
       .ease(d3.easeCubicInOut)
       .attr('stroke-width', this.strokeWidth)
       .style('stroke', this.stroke)
-      .style('opacity', this.opacity)
+      // .style('opacity', this.opacity)
       .style('stroke', this.stroke)
       .attr('stroke-linecap', this.strokeLinecap)
       .attr('y1', this.originY - this.l/2)
@@ -102,20 +104,24 @@ class Line {
   randomize() {
     this.stroke = colors[Math.floor(Math.random()*colors.length)]
     this.originY = d3.randomUniform(100, 300)();
-    this.strokeWidth = (Math.random() * 20) + 1;
-    this.opacity = Math.random() + 0.25;
+    this.strokeWidth = d3.randomUniform(this.sBounds[0], this.sBounds[1])();
+    this.opacity = Math.random() + 0.20;
     this.l = d3.randomUniform(this.lBounds[0], this.lBounds[1])();
 
     if (!this.shouldRotate) {
       this.rotation = Math.random()*360;
     }
-
-    let linecaps = ['square', 'round'];
-    this.strokeLinecap = linecaps[Math.floor(Math.random() * 2)];
+    //
+    // let linecaps = ['square', 'round'];
+    // this.strokeLinecap = linecaps[Math.floor(Math.random() * 2)];
   }
 
   setLengthBounds(l1, l2) {
     this.lBounds = [l1, l2];
+  }
+
+  setStrokeBounds(s1, s2) {
+    this.sBounds = [s1, s2];
   }
   enableRotate(deg) {
     this.shouldRotate = true;
@@ -128,7 +134,8 @@ class Line {
 };
 
 let s = new Line('#second');
-s.setLengthBounds(175, 200);
+s.setLengthBounds(100, 200);
+s.setStrokeBounds(1, 30);
 let m = new Line('#minute');
 m.setLengthBounds(100, 175);
 let h = new Line('#hour');
